chore: updated packages (#262)
* chore: updated packages

* chore: dependabot, ignore major updates

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -16,3 +16,6 @@ updates:
     schedule:
       # Check for updates to GitHub Actions every weekday
       interval: "daily"
+    ignore:
+      - dependency-name: "github-linguist"
+        update-types: ["version-update:semver-major"]
